# AI-voice-agent-with-avatar

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  docker-compose.yml  project_requirement.md
ai-voice-agent-backend/: .env.example  Dockerfile  agent.py  agent_definition.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
ai-voice-agent-backend/db/: supabase_client.py
ai-voice-agent-backend/tests/: conftest.py  test_agent_definition.py  test_appointment_tools.py  test_models.py  test_slot_generator.py
ai-voice-agent-backend/tools/: appointment_tools.py  slot_generator.py
ai-voice-agent-frontend/: Dockerfile  package-lock.json  package.json
ai-voice-agent-frontend/src/app/: layout.tsx  page.tsx
ai-voice-agent-frontend/src/app/api/token/: route.ts
ai-voice-agent-frontend/src/components/: AvatarDisplay.tsx  CallSummary.tsx  SessionView.tsx  ToolCallCard.tsx  ToolCallPanel.tsx  TranscriptPanel.tsx  VoiceAgentApp.tsx  WelcomeView.tsx
ai-voice-agent-frontend/src/hooks/: useCallSummary.ts  useToken.ts  useToolCalls.ts
ai-voice-agent-frontend/src/lib/: types.ts  utils.ts
